Revert "remove GAC"
This reverts commit d1b1ba01a54b37b40c0d8a7803aa808729c78956.

--- a/Ahmed/Ahmed.csproj
+++ b/Ahmed/Ahmed.csproj
@@ -67,7 +67,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
+    <PostBuildEvent>"C:\Program Files (x86)\Microsoft SDKs\Windows\v10.0A\bin\NETFX 4.6.1 Tools\gacutil.exe" /i "$(TargetDir)Romanchuk.Ahmed.dll"</PostBuildEvent>
   </PropertyGroup>
 </Project>
