--- a/Ahmed/Ahmed.csproj
+++ b/Ahmed/Ahmed.csproj
@@ -50,8 +50,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Reactive, Version=4.1.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Reactive.4.1.3\lib\net46\System.Reactive.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>False</Private>
     </Reference>
     <Reference Include="System.Windows" />
     <Reference Include="System.Windows.Forms" />
@@ -60,6 +58,7 @@
   <ItemGroup>
     <Compile Include="Ahmed.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rx\BotSense.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
