--- a/Ahmed/Ahmed.csproj
+++ b/Ahmed/Ahmed.csproj
@@ -56,7 +56,7 @@
     <Compile Include="BattleStrategy\RageBattleStrategy.cs" />
     <Compile Include="Helpers\ShootHelpers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Target.cs" />
+    <Compile Include="Enemy.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="key.snk" />
